updated spelling mistake

--- a/index.html
+++ b/index.html
@@ -550,11 +550,11 @@
       <form class="level" id="level-select">
         <p>Select Level:</p>
         <input type="radio" id="easy" name="level" value="easy" checked>
-        <label for="easy">Easy (Loose 0 for incorrect answers)</label><br>
+        <label for="easy">Easy (Lose 0 for incorrect answers)</label><br>
         <input type="radio" id="medium" name="level" value="medium">
-        <label for="medium">Medium (Loose 1 for incorrect answers)</label><br>
+        <label for="medium">Medium (Lose 1 for incorrect answers)</label><br>
         <input type="radio" id="hard" name="level" value="hard">
-        <label for="hard">Hard (Loose 2 for incorrect answers)</label><br>
+        <label for="hard">Hard (Lose 2 for incorrect answers)</label><br>
     </div>
     <div id="score-container">
       <p class="label">Score:</p>
