--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-touch-events/1.0.5/jquery.mobile-events.js"></script>
+  <script src="./jquery.touch.js"></script>
+
 
   <meta charset="UTF-8" />
 </head>
@@ -125,7 +127,7 @@
     ['5', 'correctResponses.mp3', 7286, 8575, 'טוב מאוד'],
   ]
 
-  
+
   function getNumberAudiofileUrl(number) {
     const isOdd = number % 2 !== 0
     const isOutsideBounds = number < 2 || number > 60
@@ -326,6 +328,14 @@
           return true
         }
       },
+    }).touch({
+      animate: false,
+      sticky: false,
+      dragx: true,
+      dragy: true,
+      rotate: false,
+      resort: true,
+      scale: false
     })
     $('.droppable').droppable({
       accept: function (drag) {
@@ -560,11 +570,9 @@
 
   }
 
-  .dragndrop{
+  .dragndrop {
     font-family: Georgia, 'Times New Roman', Times, serif
   }
-
-
 </style>
 
 <body class="dragndrop">
