--- a/index.html
+++ b/index.html
@@ -137,28 +137,56 @@
   const allNumbersAudio = 'https://www.essentialhebrew.com/thekey/allaudio/numbersAll_noMinus.mp3'
 
   const allNumbersTimestamps = [
-    ["0", 1, 20],
-    ["1", 1, 20],
-    ["2", 1, 20],
-    ["3", 1, 20],
-    ["4", 1, 20],
-    ["5", 1, 20],
-    ["6", 1, 20],
-    ["7", 1, 20],
-    ["8", 1, 20],
-    ["9", 1, 20],
-    ["10", 1, 20],
-    ["11", 1, 20],
-    ["12", 1, 20],
-    ["13", 1, 20],
-    ["14", 1, 20],
-    ["15", 1, 20],
-    ["16", 1, 20],
-    ["17", 1, 20],
-    ["18", 1, 20],
-    ["19", 1, 20],
-    ["20", 1, 20]
+    ["0", 1, 10],
+    ["1", 1, 10],
+    ["2", 1, 10],
+    ["3", 1, 10],
+    ["4", 1, 10],
+    ["5", 1, 10],
+    ["6", 1, 10],
+    ["7", 1, 10],
+    ["8", 1, 10],
+    ["9", 1, 10],
+    ["10", 1, 10],
+    ["11", 1, 10],
+    ["12", 1, 10],
+    ["13", 1, 10],
+    ["14", 1, 10],
+    ["15", 1, 10],
+    ["16", 1, 10],
+    ["17", 1, 10],
+    ["18", 1, 10],
+    ["19", 1, 10],
+    ["20", 1, 10]
   ]
+
+  function playNumberAudio(number, callback) {
+    const audio = new Audio(allNumbersAudio)
+    let startTime
+    let stopTime
+    for (let idx = 0; idx <= allNumbersTimestamps.length - 1; idx++) {
+      if (allNumbersTimestamps[idx][0] === number.toString()) {
+        startTime = allNumbersTimestamps[idx][1]
+        stopTime = allNumbersTimestamps[idx][2]
+      }
+    }
+    audio.currentTime = startTime
+    audio.addEventListener(
+      'timeupdate',
+      function () {
+        if (audio.currentTime >= stopTime) {
+          audio.pause()
+          audio.currentTime = 0 //jon added
+          if (typeof callback === 'function') {
+            callback()
+          }
+        }
+      },
+      false,
+    )
+    audio.play()
+  }
+
 
   /**
   Keep track of words that have been marked as correct
